[project]
name = "fishers101-com"
version = "0.1.0"
description = ""
authors = [
    {name = "Greg Back", email = "greg@fishers101.com"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "jinja2 (>=3.1.5,<4.0.0)",
    "markdown (>=3.7,<4.0)"
]

[tool.poetry]
packages = [{include = "fishers101"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
